--- a/.github/workflows/uat_cd.yml
+++ b/.github/workflows/uat_cd.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   deploy_all:
-    if: ${{ github.event.workflow_run.conclusion == 'success' && github.event.workflow_run.head_branch == 'testing' }}
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
 
     steps:
@@ -30,7 +30,7 @@ jobs:
 
       - name: Deploy all services
         run: |
-          cd k8s-staging
+          cd k8s
           kubectl apply -f configmaps.yaml
           kubectl apply -f secrets.yaml
           kubectl apply -f product-db.yaml
