--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,10 @@ logs/
 .coverage
 coverage/
 pytest_cache/
+
+# Playwright
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+/playwright/.auth/
