--- a/k8s-prod/secrets.yaml
+++ b/k8s-prod/secrets.yaml
@@ -6,3 +6,6 @@ type: Opaque
 data:
   POSTGRES_USER: "cG9zdGdyZXM=" # postgres
   POSTGRES_PASSWORD: "cG9zdGdyZXM=" # postgres
+# RabbitMQ Credentials
+  RABBITMQ_USER: "Z3Vlc3Q=" # Base64 for 'guest'
+  RABBITMQ_PASS: "Z3Vlc3Q=" # Base64 for 'guest'
