--- a/.github/workflows/uat_cd.yml
+++ b/.github/workflows/uat_cd.yml
@@ -89,10 +89,38 @@ jobs:
           echo "Timeout waiting for frontend IP" >&2
           exit 1
 
-      - name: Run acceptance tests
+      - name: Run smoke checks
         run: |
           set -e
           echo "Testing frontend at $FRONTEND"
           curl -fsS "$FRONTEND/api/products/"   | head -c 200
           curl -fsS "$FRONTEND/api/orders/"     | head -c 200
           curl -fsS "$FRONTEND/api/customers/"  | head -c 200
+
+      - name: Install Node.js for playwright tests
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18
+
+      - name: Install dependencies
+        run: |
+          if [ -f package-lock.json ]; then
+            npm ci
+          else
+            npm install
+          fi
+
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps
+
+      - name: Run Playwright tests on staging
+        env:
+          BASE_URL: ${{ steps.ip.outputs.frontend }}
+        run: npx playwright test --reporter=html
+
+      - name: Upload Playwright report
+        if: always()
+        uses: actions/upload-artifact@v3
+        with:
+          name: playwright-report 
+          path: playwright-report
