--- a/k8s-prod/order-service.yaml
+++ b/k8s-prod/order-service.yaml
@@ -49,6 +49,21 @@ spec:
                 configMapKeyRef:
                   name: ecommerce-config
                   key: CUSTOMER_SERVICE_URL
+            - name: RABBITMQ_HOST
+              valueFrom:
+                configMapKeyRef:
+                  name: ecommerce-config
+                  key: RABBITMQ_HOST
+            - name: RABBITMQ_USER
+              valueFrom:
+                secretKeyRef:
+                  name: ecommerce-secret
+                  key: RABBITMQ_USER
+            - name: RABBITMQ_PASS
+              valueFrom:
+                secretKeyRef:
+                  name: ecommerce-secret
+                  key: RABBITMQ_PASS
 ---
 apiVersion: v1
 kind: Service
