--- a/.github/workflows/uat_cd.yml
+++ b/.github/workflows/uat_cd.yml
@@ -115,12 +115,12 @@ jobs:
 
       - name: Run Playwright tests on staging
         env:
-          BASE_URL: ${{ steps.ip.outputs.frontend }}
+          BASE_URL: ${{ env.FRONTEND }}
         run: npx playwright test --reporter=html
 
       - name: Upload Playwright report
         if: always()
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: playwright-report 
           path: playwright-report
