--- a/k8s-prod/order-service.yaml
+++ b/k8s-prod/order-service.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: order-service-w10t2
+  name: order-service
   labels:
     app: order-service
 spec:
@@ -68,7 +68,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: order-service-w10t2
+  name: order-service
   labels:
     app: order-service
 spec:
