--- a/k8s-prod/configmaps.yaml
+++ b/k8s-prod/configmaps.yaml
@@ -12,7 +12,8 @@ data:
   PRODUCT_SERVICE_URL: http://product-service:8000
   ORDER_SERVICE_URL: http://order-service:8000
   CUSTOMER_SERVICE_URL: http://customer-service:8000
-  RABBITMQ_SERVICE_URL: rabbitmq-service
+  RABBITMQ_HOST: rabbitmq-service
+  RABBITMQ_PORT: "5672"
 
   # Product image storage
   AZURE_STORAGE_CONTAINER_NAME: product-images
