--- a/.github/workflows/prod_cd.yml
+++ b/.github/workflows/prod_cd.yml
@@ -1,17 +1,15 @@
 name: CD - Production (CI/CD)
 
 on:
+  workflow_run:
+    workflows: ["E2E - Playwright on Staging"]
+    types:
+      - completed
   pull_request:
     branches:
       - main
     types:
       - closed
-
-    # trigger if E2E tests passed in staging
-  workflow_run:
-    workflows: ["E2E - Playwright on Staging"]
-    types:
-      - completed
   workflow_dispatch:
 
 permissions:
@@ -21,6 +19,7 @@ permissions:
 jobs:
   deploy_prod:
     name: Deploy to Production
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     environment: production
 
