--- a/.github/workflows/prod_cd.yml
+++ b/.github/workflows/prod_cd.yml
@@ -19,7 +19,10 @@ permissions:
 jobs:
   deploy_prod:
     name: Deploy to Production
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    if: |
+      (github.event_name == 'workflow_run' && github.event.workflow_run.conclusion == 'success') ||
+      (github.event_name == 'pull_request' && github.event.pull_request.merged == true) ||
+      (github.event_name == 'workflow_dispatch')
     runs-on: ubuntu-latest
     environment: production
 
