--- a/.github/workflows/staging_infrastructure.yml
+++ b/.github/workflows/staging_infrastructure.yml
@@ -45,3 +45,4 @@ jobs:
         run: |
           echo "STORAGE_ACCOUNT_NAME=$(terraform output -raw storage_account_name)" >> $GITHUB_OUTPUT
           echo "STORAGE_ACCOUNT_KEY=$(terraform output -raw storage_account_key)" >> $GITHUB_OUTPUT
+# test
