--- a/.github/workflows/prod_cd.yml
+++ b/.github/workflows/prod_cd.yml
@@ -5,12 +5,6 @@ on:
     workflows: ["E2E - Playwright on Staging"]
     types:
       - completed
-  pull_request:
-    branches:
-      - main
-    types:
-      - closed
-  workflow_dispatch:
 
 permissions:
   contents: read
@@ -19,10 +13,7 @@ permissions:
 jobs:
   deploy_prod:
     name: Deploy to Production
-    if: |
-      (github.event_name == 'workflow_run' && github.event.workflow_run.conclusion == 'success') ||
-      (github.event_name == 'pull_request' && github.event.pull_request.merged == true) ||
-      (github.event_name == 'workflow_dispatch')
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     environment: production
 
