--- a/.github/workflows/prod_cd.yml
+++ b/.github/workflows/prod_cd.yml
@@ -1,10 +1,7 @@
 name: CD - Production (CI/CD)
 
 on:
-  workflow_run:
-    workflows: ["E2E - Playwright on Staging"]
-    types:
-      - completed
+  workflow_dispatch:
 jobs:
   deploy_prod:
     name: Deploy to Production
